# GCF_Bact

./: Dockerfile  Install_prerequisites.sh  README.md  main.py  package_manager.sh  package_manager_2.sh  pyproject.toml  requirements.txt
pipelines/: Dockerfile  vcf2pseudogenome.py
src/: build_tree.sh  create_consensus_fasta.sh  filter_variants.sh  index_reference.sh  map_reads.sh  quality_adapter_trimming.sh  remove_non_informative_sites.sh  sort_index_reads.sh  variant_calling.sh
